# quantium-starter-repo

./: README.md  integration_tests.sh  pyproject.toml  requirements.txt
app_code/: app_main.py  callbacks.py  components.py  components_ids.py  data_filtering.py
app_tests/: conftest.py  test_app_backend.py  test_app_frontend.py
code/: app_main.py  callbacks.py  components.py  components_ids.py  data_filtering.py
code/assets/: styles.css
data/: data_processing.py  final.csv
src/Soul_foods/: app_main.py  callbacks.py  components.py  components_ids.py
